# cob_environment_perception

cob_3d_experience_mapping/: CMakeLists.txt
cob_3d_experience_mapping/shadow/include/: algo.hpp  db_interface.hpp  dfs.hpp  input_odom.hpp  types.hpp
cob_3d_experience_mapping/shadow/src/: db_transient.cpp
cob_3d_features/: CMakeLists.txt
cob_3d_features/common/include/cob_3d_features/: organized_normal_estimation_edge.h
cob_3d_features/common/src/: organized_normal_estimation_edge_omp.cpp
cob_3d_mapping_demonstrator/config/: cartons.txt
cob_3d_mapping_demonstrator/ros/launch/: config.yaml  dashboard.launch
cob_3d_segmentation/: CMakeLists.txt
cob_3d_segmentation/common/include/cob_3d_segmentation/quad_regression/impl/: quad_regression.hpp
cob_table_object_cluster/: package.xml
